# k8s-admin-agent

./: .env.example  .gitignore  Dockerfile  README.md  agentstack.json  config.yaml  deploy.sh  k8s-deployment.yaml  pyproject.toml  pytest.ini  run-agent.sh  test-local.sh
docs/: AGENTSTACK_API_ENDPOINTS.md  AGENTSTACK_CONCEPTS.md  DYNAMIC_TOOL_DISCOVERY.md  FIX_FINAL_ANSWER_TOOL.md  IMPROVEMENTS.md  SUMMARY_OF_FIXES.md  USAGE.md
scripts/: force-agent-registration.sh  show_llm_instructions.py  show_mcp_tools.py
src/k8s_admin_agent/: __init__.py  agent.py
src/k8s_admin_agent/core/: __init__.py  config.py  log.py
src/k8s_admin_agent/helpers/: __init__.py  trajectory.py
src/k8s_admin_agent/tools/: __init__.py  k8s_mcp_tool.py
tests/: __init__.py  test_agent.py  test_dynamic_tools.py  test_k8s_mcp_tool.py  test_mcp_integration.py
